# pixell

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  INSTALL.rst  LICENSE  MAKING_A_RELEASE  MANIFEST.in  Makefile  README.rst  meson.build  optional-requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
cython/: Makefile  cmisc.pxd  cmisc.pyx  cmisc_core.c  cmisc_core.h  csharp.h  csharp.pxd  distances.c  distances.pxd  distances.pyx  distances_core.c  distances_core.h  distances_wrap.pxd  sharp.pyx  sharp_utils.c  sharp_utils.h  srcsim.pyx  srcsim_core.c  srcsim_core.h  srcsim_wrap.pxd
demo/: sotools_demo.ipynb  testmap.fits
docs/: Makefile  conf.py  fourier.rst  geometry.rst  harmonic.rst  index.rst  installation.rst  loading.rst  make.bat  masking.rst  matched.rst  nersc.rst  objects.rst  plotting.rst  reference.rst  requirements.txt  simulation.rst  thumbnails.rst  usage.rst  utilities.rst  wavelet.rst
fortran/: Makefile  array_ops.F90  colorize.f90  interpol.F90
pixell/: __init__.py  _version.py  aberration.py  analysis.py  array_ops.py  bench.py  bunch.py  cgrid.py  colorize.py  colors.py  config.py  coordinates.py  coordsys.py  curvedsky.py  device.py  enmap.py  enplot.py  ephem.py  fake_communicator.py  fft.py  interpol.py  lensing.py  memory.py  meson.build  mpi.py  mpiutils.py  multimap.py  old_aberration.py  pointsrcs.py  powspec.py  reproject.py  resample.py  sites.py  sqlite.py  tilemap.py  uharm.py  utils.py  warray.py  wavelets.py  wcsutils.py
pixell/tests/: __init__.py  pixel_tests.py  test_geom.py  test_pixell.py  tests.yml
pixell/tests/data/: MM_041121.pkl  MM_lensed_071123.fits  MM_offset_raw_pos_091819.fits
python/: curvedsky.py  enmap.py  fft.py  powspec.py  slice.py  utils.py  wcs.py
python/sharp/: Makefile  csharp.h  setup.py  sharp.pyx
scripts/: amop  benchmark_pixell.py  benchmark_pixell_runner.py  build_wheels.sh  install_libsharp.sh  meson.build  omp_hello.c  omp_hello.f90  osx.sh  test-pixell
scripts/generate_tests/: generate_test_lens.py  pixel_test_generator.py
sotools/: __init__.py  coordinates.py  curvedsky.py  enmap.py  fft.py  interpol.py  lensing.py  powspec.py  reproject.py  resample.py  slice.py  sotools.py  utils.py  wcs.py  wcsutils.py
sotools/sharp/: __init__.py  csharp.h  csharp.pxd
tests/: __init__.py  generate_test_lens.py  pixel_test_generator.py  pixel_tests.py  solib_test.py  test_geom.py  test_io.py  test_pixell.py  test_sotools.py  tests.yml
tests/data/: MM_051519.pkl  MM_091819.pkl  MM_092318.pkl  MM_11282018.pkl  MM_20200512.pkl  MM_lensed_042219.fits  MM_lensed_091819.fits  MM_offset_grad_042219.fits  MM_offset_grad_091819.fits  MM_offset_obs_pos_042219.fits  MM_offset_obs_pos_071123.fits  MM_offset_obs_pos_091819.fits  MM_offset_raw_pos_042219.fits  MM_offset_raw_pos_071123.fits  MM_offset_real_grad_042219.fits  MM_unlensed_042219.fits  MM_unlensed_091819.fits  annot.txt  cutsky_geometry_scaled_20x_9.4_arcminute_pixel_shape_wcs_tuple.pkl
