[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy', 'cython', 'versioneer[toml]', 'build', 'pytest']

[project]
name = 'pixell'
version = "0.28.2"
description = "A rectangular pixel map manipulation and harmonic analysis library derived from Sigurd Naess' enlib."
readme = 'README.rst'
requires-python = '>=3.9'
license = {file = 'LICENSE'}
authors = [
    {name = "Simons Observatory Collaboration Analysis Library Task Force"},
]
maintainers = [
    {name = "Sigurd Naess", email = "s.k.nass@astro.uio.no"},
    {name = "Mathew Madhavacheril", email = "mathewsyriac@gmail.com"},
    {name = "Matthew Hasselfield", email = "mhasselfield@flatironinstitute.org"},
    {name = "Josh Borrow", email = "josh@joshborrow.com"}    
]
dependencies = [
    'numpy',
    'astropy>=2.0',
    'h5py>=2.7',
    'scipy>=1.0',
    'matplotlib>=2.0',
    'Pillow>=5.3.0, != 10.4.0',
    'ducc0>=0.36.0',
    'numba>=0.54.0'
]

[project.scripts]
# See scripts/meson.build for installation
benchmark-pixell-runner = "pixell.scripts.benchmark_pixell_runner:main"
benchmark-pixell = "pixell.scripts.benchmark_pixell:main"

[project.optional-dependencies]
test = [
    'python_dateutil>=2.7',
    'healpy>=1.13',
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*i686* *musllinux*"

[tool.coverage.run]
source = [
    "pixell"
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
exclude_also = ["if TYPE_CHECKING:"]
