python_sources = [
    '__init__.py',
    'aberration.py',
    'analysis.py',
    'array_ops.py',
    'bunch.py',
    'cgrid.py',
    'colorize.py',
    'colors.py',
    'coordinates.py',
    'curvedsky.py',
    'enmap.py',
    'enplot.py',
    'fft.py',
    'interpol.py',
    'lensing.py',
    'memory.py',
    'mpi.py',
    'mpiutils.py',
    'multimap.py',
    'old_aberration.py',
    'pointsrcs.py',
    'powspec.py',
    'reproject.py',
    'resample.py',
    'tilemap.py',
    'uharm.py',
    'utils.py',
    'wavelets.py',
    'wcsutils.py',
    'bench.py',
    # Not technically a python source file, but is required for pixell
    'arial.ttf',
]

py.install_sources(
    python_sources,
    subdir: 'pixell'
)
